--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,64 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "edulib"
-version = "0.1.0"
-description = "Eine Bildungsbibliothek für Python"
-authors = [
-    {name = "Aleksa Lukic", email = "aleksalukic92@web.de"},
-]
+name = "Edulib"
+version = "0.0.1"
+description = "Toolbox with helpers."
 readme = "README.md"
-license = {text = "MIT"}
-requires-python = ">=3.8"
+requires-python = ">=3.9"
+license = {file = "LICENSE.txt"}
+authors = [
+  {name = "Aleksa Lukic", email = "aleksalukic92@web.de"},
+  {name = "xwr4p"},
+  ]
 classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Education",
+    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
+    "Operating System :: OS Independent",
 ]
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+dynamic = ["dependencies"]
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.setuptools.dynamic]
+dependencies = {file = "requirements.txt"}
+
+[project.optional-dependencies]
+dev = [
+  "autoflake",
+  "black",
+  "build",
+  "coverage",
+  "flake8",
+  "isort",
+  "mypy",
+  "pre-commit",
+  "pytest",
+  "pytest-cov",
+  "toml",
+  "tox",
+  "twine",
+]
+
+[options.packages.find]
+where=src
+
+[project.urls]
+"Homepage" = "https://github.com/Aleksa-Lukic/Edulib"
+"Bug Tracker" = "https://github.com/Aleksa-Lukic/Edulib/issues"
+
+[tool.autoflake]
+ignore-init-module-imports = true
+in-place = true
+recursive = true
+remove-all-unused-imports = true
+remove-unused-variables = true
+
+[tool.isort]
+profile = "black"
+
+[tool.pytest.ini_options]
+addopts = "-ra -v --cov --cov-report term-missing"
+minversion = 7.0
+pythonpath = ["src"]
+testpaths = ["tests"]
