Changes to be committed: 	modified:   .gitignore 	modified:   pyproject.toml 	renamed:    src/toolbox/__init__.py -> src/edulib/__init__.py 	new file:   src/edulib/toolkit/__init__,py 	new file:   src/edulib/toolkit/filereader.py 	new file:   src/edulib/toolkit/textcleaner.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dev = [
 ]
 
 [options.packages.find]
-where=src
+where=["src"]
 
 [project.urls]
 "Homepage" = "https://github.com/Aleksa-Lukic/Edulib"
